# dict-trie

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  README.rst  run_tests  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
dict_trie/: __init__.py  compatibility.py  dict_trie.py
docs/: CONTRIBUTING.md  credits.rst  development.rst  index.rst  installation.rst  tests.rst  usage.rst
docs/source/: dict_trie.rst  modules.rst
presentations/2019-04-01/: 2019-04-01.tex  ld.py  logos
tests/: test_trie.py
