[metadata]
name = dict-trie
version = 1.0.2
description = Trie implementation for approximate string matching.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = http://dict-trie.readthedocs.io/en/latest/
keywords = bioinformatics
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = find:
tests_require =
    fake-open==0.0.1
    pytest==4.0.1

[flake8]
per-file-ignores =
    dict_trie/__init__.py: F401
    dict_trie/dict_trie.py: E252

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests
